--- a/fclone/templates/login.html
+++ b/fclone/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook Clone</title>
+    <title>Facebook</title>
     <style>
         :root {
             --fb-blue: #1877f2;
